--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My Webpage</title>
   <link rel="stylesheet" href="./style.css">
+
 </head>
 <body>
 <div class="profile-block">
@@ -13,7 +14,7 @@
     <p>QA who's learning codding 💻</p>
  </div>
   <div class="image-block">
-    <img src="/images/main.jpg" alt="laptop">
+    <img src="./images/main.jpg" alt="laptop">
   </div>
 </div>
 <div class="intro-block">
